--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Columna izquierda -->
     <aside class="sidebar">
       <img src="Imagenes/imagenPerfil.jpg" alt="Foto de perfil" class="profile-pic">
-      <h2 class="profile-name">Nombre Usuario</h2>
+      <h2 class="profile-name">Juan Sebastian</h2>
       <ul class="profile-info">
         <li>Información</li>
         <li>Info</li>
