--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fakebook SPA</title>
+  <title>Fakebook </title>
   <link rel="stylesheet" href="Styless.css">
 </head>
 <body>
@@ -24,9 +24,15 @@
         <li>X Amigos</li>
       </ul>
       <div class="friends-preview">
-        <div class="friend"></div>
-        <div class="friend"></div>
-        <div class="friend"></div>
+        <a href="Imagenes/imagenPerfilAmigo.jpg" target="_blank">
+          <img src="Imagenes/imagenPerfilAmigo.jpg" alt="Amigo 1" class="friend">
+        </a>
+        <a href="Imagenes/imagenPerfilAmigo2.jpg" target="_blank">
+          <img src="Imagenes/imagenPerfilAmigo2.jpg" alt="Amigo 2" class="friend">
+        </a>
+        <a href="Imagenes/imagenPerfilAmigo3.jpg" target="_blank">
+          <img src="Imagenes/imagenPerfilAmigo3.jpg" alt="Amigo 3" class="friend">
+        </a>
       </div>
       <a href="#">Ver todos</a>
     </aside>
